--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,6 +7,6 @@
 <body>
 <a> href="https://x.com/icemonae/status/1991127340970066243?t=SDZGQLyvc-5wQ39663dT4A&s=08">My Tweet Invitation</a>
 
-<nav> href="html_basic/index.html">Go back to Home Page</nav>
+<a> href="https://github.com/Lestynejr/My_First_Portfolio/blob/main/html_basic/tweets.html">Go back to Home Page</a>
 </body>
 </html>
