--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,8 +5,9 @@
     <title>Base Index</title>
 </head>
 <body>
+    <blockquote class="twitter-tweet">
 <a> href="https://x.com/icemonae/status/1991127340970066243?t=SDZGQLyvc-5wQ39663dT4A&s=08">My Tweet Invitation</a>
-
+</blockquote>
 <a> href="https://github.com/Lestynejr/My_First_Portfolio/blob/main/html_basic/tweets.html">Go back to Home Page</a>
 </body>
 </html>
