--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,6 +8,6 @@
     <blockquote class="twitter-tweet">
 <a> href="https://x.com/icemonae/status/1991127340970066243?t=SDZGQLyvc-5wQ39663dT4A&s=08">My Tweet Invitation</a>
 </blockquote>
-<a>[\s\S]*?href="https://github.com/Lestynejr/My_First_Portfolio/blob/main/html_basic/tweets.html">Go back to Home Page</a>
+<a [\s\S]*?href="https://github.com/Lestynejr/My_First_Portfolio/blob/main/html_basic/tweets.html">Go back to Home Page</a>
 </body>
 </html>
