--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,25 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base Index</title>
+    <title>Home</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <h1>Main Title</h1>
-    <p>This is the first paragraph of the page.</p>
+    <main>
+        <article>
+            <!-- Page‑specific content goes here -->
+            <h1>Welcome to my website</h1>
+            <p>This is my first website. More Contents, images, etc. Coming Soon.</p>
+        </article>
 
-    <h2>Subheading Level 2</h2>
-    <p>This is the second paragraph, containing more information.</p>
+        <aside>
+            <p>My placeholders to add comment thread later</p>
+        </aside>
+    </main>
 
-    <h3>Subheading Level 3</h3>
-    <p>This is the third paragraph on the page.</p>
-
-    <p>This is the fourth paragraph to complete the requirement.</p>
-
-    <!-- Clickable Image -->
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
-
+    <footer>
+        <p>Made by "Celestine Nnamdi" - <a href="https://github.com/Lestynejr" target="_blank">Visit My Github</a></p>
+    </footer>
 </body>
 </html>
