Fixed page layout for consistency with index.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,12 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base Index</title>
+    <title>Home</title>
 </head>
 <body>
-    <blockquote class="twitter-tweet">
-<a> href="https://x.com/icemonae/status/1991127340970066243?t=SDZGQLyvc-5wQ39663dT4A&s=08">My Tweet Invitation</a>
-</blockquote>
-<a [\s\S]*?href="https://github.com/Lestynejr/My_First_Portfolio/blob/main/html_basic/tweets.html">Go back to Home Page</a>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <!-- Page‑specific content goes here -->
+            <h1>Welcome to my website</h1>
+            <p>This is the home page. Add your text, images, etc. here.</p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside> 
+    </main>
+
+
+    <footer>
+        <p>Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
+    </footer>
 </body>
 </html>
