Fixed page layout for consistency with tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,8 +24,9 @@
         </aside>
     </main>
 
+
     <footer>
-        <p>Made by "Celestine Nnamdi" - <a href="https://github.com/Lestynejr" target="_blank">Visit My Github</a></p>
+        <p>Made by Celestine Nnamdi - <a href="https://github.com/Lestynejr" target="_blank">Visit My Github</a></p>
     </footer>
 </body>
 </html>
