Fixed page layout for consistency with tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,17 +16,17 @@
         <article>
             <!-- Page‑specific content goes here -->
             <h1>Welcome to my website</h1>
-            <p>This is my first website. More Contents, images, etc. Coming Soon.</p>
+            <p>This is the home page. Add your text, images, etc. here.</p>
         </article>
 
         <aside>
-            <p>My placeholders to add comment thread later</p>
-        </aside>
+            <p>placeholder to add comment thread later</p>
+        </aside> 
     </main>
 
 
     <footer>
-        <p>Made by Celestine Nnamdi - <a href="https://github.com/Lestynejr" target="_blank">Visit My Github</a></p>
+        <p>Made by Celestine Nnamdi - <a href="https://github.com/Lestynejr" target="_blank">Visit My Twitter</a></p>
     </footer>
 </body>
 </html>
