Fixed page layout for consistency with tweets.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -17,6 +17,11 @@
             <!-- Page‑specific content goes here -->
             <h1>Welcome to my website</h1>
             <p>This is the home page. Add your text, images, etc. here.</p>
+
+            <!-- Embedded tweet -->
+            <blockquote class="twitter-tweet">
+                <a href="https://twitter.com/TwitterDev/status/1228393702244134912"></a>
+            </blockquote>
         </article>
 
         <aside>
