Fixed page layout for consistency with tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,6 +17,19 @@
             <!-- Page‑specific content goes here -->
             <h1>Welcome to my website</h1>
             <p>This is the home page. Add your text, images, etc. here.</p>
+            
+            <h2>Subheading Level 2</h2>
+            <p>This is the second paragraph, containing more information.</p>
+
+            <h3>Subheading Level 3</h3>
+            <p>This is the third paragraph on the page.</p>
+
+            <p>This is the fourth paragraph to complete the requirement.</p>
+
+             <!-- Clickable Image -->
+             <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">
+                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+             </a>
         </article>
 
         <aside>
@@ -26,7 +39,7 @@
 
 
     <footer>
-        <p>Made by Celestine Nnamdi - <a href="https://github.com/Lestynejr" target="_blank">Visit My Twitter</a></p>
+        <p>Made by Celestine Nnamdi - <a href="https://github.com/Lestynejr" target="_blank">Visit My Github</a></p>
     </footer>
 </body>
 </html>
