Added footer section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,4 +56,7 @@
             </section>
     </header>
 </body>
+<footer>
+    <p>Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
+</footer>
 </html>
