Added &copy;, updated footer

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Celestine Nnamdi - Personal Portfolio</title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
     <header>
         <h1>Celestine</h1>
         <p>Hello i’m Celestine Nnamdi — A career professional with over 8 years experience in 
             banking operations, customer service, and process optimization.</p>
+    </header>
             <nav>
                 <ul class="flex-row">
                     <li><a href="Projects">Projects</a></li>
                     <li><a href="About">About Me</a></li>
                     <li><a href="Contact">Contact</a></li>
                 </ul>
+    
             </nav>
             <section id="introduction">
                 <h2>Introduction</h2>
@@ -54,9 +56,8 @@
                 <li><a href="https://github.com/Lestynejr" target="_blank">Github</a></li>
                 </ul>
             </section>
-    </header>
 </body>
 <footer>
-    <p>Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
+    <p>&copy; Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
 </footer>
 </html>
