Added &copy;, updated footer

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,7 @@
 <body>
     <header>
         <h1>Celestine</h1>
-        <p>Hello i’m Celestine Nnamdi — A career professional with over 8 years experience in 
-            banking operations, customer service, and process optimization.</p>
+        <p>Hello i’m Celestine Nnamdi — A career professional with over 8 years experience in banking operations, customer service, and process optimization.</p>
     </header>
     <nav>
         <ul class="flex-row">
@@ -20,9 +19,7 @@
             </nav>
     <section id="introduction">
         <h2>Introduction</h2>
-        <p>I am an aspiring Frontend Web Developer currently sharpening my skills in HTML, CSS, 
-           JavaScript, and React while bringing along my background in analytical thinking, 
-           attention to detail, and a proven ability to work in high-pressure, results-driven environments</p>
+        <p>I am an aspiring Frontend Web Developer currently sharpening my skills in HTML, CSS, JavaScript, and React while bringing along my background in analytical thinking, attention to detail, and a proven ability to work in high-pressure, results-driven environments</p>
     </section>
 
     <section id="Projects">
@@ -36,8 +33,7 @@
 
     <section id="About">
         <h2>About Me</h2>
-            <p>I am a season customer experience specialist, now charting a new path 
-                into frontend development with ALX Africa.</p>
+            <p>I am a season customer experience specialist, now charting a new path into frontend development with ALX Africa.</p>
             <h3>skills</h3>
                 <ul>
                 <li>JavaScript</li>
@@ -58,6 +54,6 @@
     </section>
 </body>
 <footer>
-    <p> &copy; Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
+       <p> &copy; Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
 </footer>
 </html>
