--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Personal - Portfolio</title>
+    <title>Celestine Nnamdi - Personal Portfolio</title>
 </head>
 <body>
     <header>
