--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,6 +54,6 @@
     </section>
 </body>
 <footer>
-       <p> &copy; Made by Celestine Nnamdi - <a href="https://x.com/icemonae/" target="_blank">Visit My Twitter</a></p>
+    <p>&copy; 2025 Celestine Nnamdi</p>
 </footer>
 </html>
