Added &copy;, updated footer

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
            <p>I am an aspiring Frontend Web Developer currently sharpening my skills in HTML, CSS, JavaScript, and React while bringing along my background in analytical thinking, attention to detail, and a proven ability to work in high-pressure, results-driven environments</p>
     </section>
 
-    <section id="Projects">
+    <section id="projects">
            <h2>Projects</h2>
            <article class="Projects">
            <h3>Edu=Rev App</h3>
@@ -31,7 +31,7 @@
            </article>
     </section>
 
-    <section id="About">
+    <section id="about">
         <h2>About Me</h2>
             <p>I am a season customer experience specialist, now charting a new path into frontend development with ALX Africa.</p>
             <h3>skills</h3>
@@ -44,7 +44,7 @@
                 </ul>
     </section>
 
-    <section id="Contact">
+    <section id="contact">
             <h2>Contact</h2>
             <ul>
             <li><a href="celestinennamdi@outlook.com" target="_blank">Email</a></li>
@@ -54,6 +54,6 @@
     </section>
 </body>
 <footer>
-    <p>&copy; 2025 Celestine Nnamdi</p>
+    <p>&copy; 2024 Celestine Nnamdi</p>
 </footer>
 </html>
